# smatsu-st-2

./: .gitignore  README.md  app.py  const.py  generate_requirements.py  pyproject.toml  requirements.txt  startup.sh  startup.txt  test.py  test2.py  test3.py  test4.py
.github/workflows/: main_smatsu-st-2.yml
.history/: app_20240917162410.py  app_20240917165736.py  app_20240917170207.py  app_20240917170640.py  app_20240917173049.py  app_20240917173614.py  requirements_20240912121517.txt  requirements_20240912121522.txt  requirements_20240912143949.txt  startup_20240911143636.txt  startup_20240911144144.txt  startup_20240911145355.sh  startup_20240911150139.sh  startup_20240911150344.sh  startup_20240911150712.sh  startup_20240911150739.sh  startup_20240911153240.sh
.history/pages/: arrival_20240917154255.py  arrival_20240917175257.py  arrival_20240917175605.py  arrival_20240917175715.py  arrival_20240917175723.py  arrival_20240917175731.py  arrival_20240917175842.py  arrival_20240917180101.py  arrival_20240917180106.py  arrival_20240917180130.py  arrival_20240917180147.py  arrival_20240918092905.py  entries_20240917153949.py  entries_20240917154510.py  entries_20240917154717.py  entries_20240917160641.py  entries_20240917160743.py  entries_20240917161252.py  entries_20240917161333.py  entries_20240917161352.py  entries_20240917161443.py  entries_20240917161749.py  entries_20240917161942.py  entries_20240917174958.py
.streamlit/: config.toml
pages/: about.py  arrival.py  contact.py  entries.py  home.py
src/smatsu_st_2/: __init__.py  app.py
(+10 files in other folders)
